feat(user): finalizado módulo principal de usuarios con perfil, contraseña y paginación
✔ Listado completo y paginado de usuarios
✔ Edición del perfil del usuario autenticado
✔ Cambio de contraseña con validación y DTO
✔ Búsqueda por ID de usuario
✔ Lógica delegada a servicio con buena estructura

// TODO:
// - Permitir a un admin cambiar el rol de un usuario (USER ↔ ADMIN)
// - Endpoint para que el usuario elimine su propia cuenta (deleteMyAccount)
// - Filtros de búsqueda por rol y username